--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img id="logo2" src="./img/logoS.png" alt="Logo">
         <nav>
             <ul>
-                <li>Home</li>
+                <li><a href="index.html">Home</a> </li>
             </ul>
         </nav>
     </div>
