--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="./CSS/styleMain.css">
+    <link rel="stylesheet" href="./CSS/styleInfo.css">
     <title>Document</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
         <img id="logo2" src="./img/logoS.png" alt="Logo">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a> </li>
+                <li><a href="index.html">Home</a></li>
             </ul>
         </nav>
     </div>
@@ -33,15 +34,12 @@
               </div>
             <h1 id="mainH">Movies</h1>
         </div>
-        <div class="card-group row row-cols-2" id="mainContent">
-
-
-        </div>
+        <div class="card-group row row-cols-2" id="mainContent"></div>
+        <div id="infos"></div>
     </div>
     <div id="footer">
         <h1 id="hFooter">Movie Factory</h1>
     </div>
-
     <script src="./JS/movies.json"></script>
     <script src="./JS/myscript.js"></script>
 </body>
